@startuml id_monad
!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml


hide empty members

note "F extends WitnessArity<TypeArity.Unary>\nfor all type classes" as ArityNote

interface "Kind<F, A>" as Kind {}
interface "Functor<M>" as FunctorBase {}
interface "Applicative<M>" as ApplicativeBase {}
interface "Monad<M>" as MonadBase {}

ArityNote .. Kind


interface "IdKind<A>" as IdKindInterface {
}

class "Id<A>" as Id << (R,orchid) Record >> {
}

class "IdKindHelper" as IdKindHelper << (H,grey) >> {
}

class IdentityMonad {
}

' --- Relationships ---

' HKT Interface Hierarchy
MonadBase --|> ApplicativeBase
ApplicativeBase --|> FunctorBase
FunctorBase --|> Kind

' IdKind pattern
IdKindInterface --|> Kind : <IdKind.Witness, A>
Id ..|> IdKindInterface : implements


IdentityMonad ..|> MonadBase : <IdKind.Witness>

' Dependencies
IdentityMonad ..> IdKindHelper : uses narrow
IdentityMonad ..> Id : uses

IdKindHelper ..> Id : uses widen / narrow





@enduml